2005/projects/Teoreties/tut2/calc.output
Terminals which are not used

   QUIT
   '^'
   '!'


Grammar

    0 $accept: lines $end

    1 lines: lines statement '\n'
    2      | /* empty */
    3      | error '\n'

    4 statement: expr
    5          | REGISTER '=' expr
    6          | CLEAR ALL
    7          | CLEAR REGISTER

    8 expr: NUMBER
    9     | expr '+' expr
   10     | expr '-' expr
   11     | expr '/' expr
   12     | expr '*' expr
   13     | SIN '(' expr ')'
   14     | COS '(' expr ')'
   15     | TAN '(' expr ')'
   16     | PI
   17     | '-' expr
   18     | '(' expr ')'
   19     | REGISTER


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 1 3
'!' (33)
'(' (40) 13 14 15 18
')' (41) 13 14 15 18
'*' (42) 12
'+' (43) 9
'-' (45) 10 17
'/' (47) 11
'=' (61) 5
'^' (94)
error (256) 3
NUMBER (258) 8
QUIT (259)
REGISTER (260) 5 7 19
CLEAR (261) 6 7
PI (262) 16
ALL (263) 6
TAN (264) 15
COS (265) 14
SIN (266) 13
UMINUS (267)


Nonterminals, with rules where they appear

$accept (23)
    on left: 0
lines (24)
    on left: 1 2 3, on right: 0 1
statement (25)
    on left: 4 5 6 7, on right: 1
expr (26)
    on left: 8 9 10 11 12 13 14 15 16 17 18 19, on right: 4 5 9 10
    11 12 13 14 15 17 18


state 0

    0 $accept: . lines $end

    error  shift, and go to state 1

    $end      reduce using rule 2 (lines)
    NUMBER    reduce using rule 2 (lines)
    REGISTER  reduce using rule 2 (lines)
    CLEAR     reduce using rule 2 (lines)
    PI        reduce using rule 2 (lines)
    '-'       reduce using rule 2 (lines)
    TAN       reduce using rule 2 (lines)
    COS       reduce using rule 2 (lines)
    SIN       reduce using rule 2 (lines)
    '('       reduce using rule 2 (lines)

    lines  go to state 2


state 1

    3 lines: error . '\n'

    '\n'  shift, and go to state 3


state 2

    0 $accept: lines . $end
    1 lines: lines . statement '\n'

    $end      shift, and go to state 4
    NUMBER    shift, and go to state 5
    REGISTER  shift, and go to state 6
    CLEAR     shift, and go to state 7
    PI        shift, and go to state 8
    '-'       shift, and go to state 9
    TAN       shift, and go to state 10
    COS       shift, and go to state 11
    SIN       shift, and go to state 12
    '('       shift, and go to state 13

    statement  go to state 14
    expr       go to state 15


state 3

    3 lines: error '\n' .

    $default  reduce using rule 3 (lines)


state 4

    0 $accept: lines $end .

    $default  accept


state 5

    8 expr: NUMBER .

    $default  reduce using rule 8 (expr)


state 6

    5 statement: REGISTER . '=' expr
   19 expr: REGISTER .

    '='  shift, and go to state 16

    $default  reduce using rule 19 (expr)


state 7

    6 statement: CLEAR . ALL
    7          | CLEAR . REGISTER

    REGISTER  shift, and go to state 17
    ALL       shift, and go to state 18


state 8

   16 expr: PI .

    $default  reduce using rule 16 (expr)


state 9

   17 expr: '-' . expr

    NUMBER    shift, and go to state 5
    REGISTER  shift, and go to state 19
    PI        shift, and go to state 8
    '-'       shift, and go to state 9
    TAN       shift, and go to state 10
    COS       shift, and go to state 11
    SIN       shift, and go to state 12
    '('       shift, and go to state 13

    expr  go to state 20


state 10

   15 expr: TAN . '(' expr ')'

    '('  shift, and go to state 21


state 11

   14 expr: COS . '(' expr ')'

    '('  shift, and go to state 22


state 12

   13 expr: SIN . '(' expr ')'

    '('  shift, and go to state 23


state 13

   18 expr: '(' . expr ')'

    NUMBER    shift, and go to state 5
    REGISTER  shift, and go to state 19
    PI        shift, and go to state 8
    '-'       shift, and go to state 9
    TAN       shift, and go to state 10
    COS       shift, and go to state 11
    SIN       shift, and go to state 12
    '('       shift, and go to state 13

    expr  go to state 24


state 14

    1 lines: lines statement . '\n'

    '\n'  shift, and go to state 25


state 15

    4 statement: expr .
    9 expr: expr . '+' expr
   10     | expr . '-' expr
   11     | expr . '/' expr
   12     | expr . '*' expr

    '+'  shift, and go to state 26
    '-'  shift, and go to state 27
    '*'  shift, and go to state 28
    '/'  shift, and go to state 29

    $default  reduce using rule 4 (statement)


state 16

    5 statement: REGISTER '=' . expr

    NUMBER    shift, and go to state 5
    REGISTER  shift, and go to state 19
    PI        shift, and go to state 8
    '-'       shift, and go to state 9
    TAN       shift, and go to state 10
    COS       shift, and go to state 11
    SIN       shift, and go to state 12
    '('       shift, and go to state 13

    expr  go to state 30


state 17

    7 statement: CLEAR REGISTER .

    $default  reduce using rule 7 (statement)


state 18

    6 statement: CLEAR ALL .

    $default  reduce using rule 6 (statement)


state 19

   19 expr: REGISTER .

    $default  reduce using rule 19 (expr)


state 20

    9 expr: expr . '+' expr
   10     | expr . '-' expr
   11     | expr . '/' expr
   12     | expr . '*' expr
   17     | '-' expr .

    $default  reduce using rule 17 (expr)


state 21

   15 expr: TAN '(' . expr ')'

    NUMBER    shift, and go to state 5
    REGISTER  shift, and go to state 19
    PI        shift, and go to state 8
    '-'       shift, and go to state 9
    TAN       shift, and go to state 10
    COS       shift, and go to state 11
    SIN       shift, and go to state 12
    '('       shift, and go to state 13

    expr  go to state 31


state 22

   14 expr: COS '(' . expr ')'

    NUMBER    shift, and go to state 5
    REGISTER  shift, and go to state 19
    PI        shift, and go to state 8
    '-'       shift, and go to state 9
    TAN       shift, and go to state 10
    COS       shift, and go to state 11
    SIN       shift, and go to state 12
    '('       shift, and go to state 13

    expr  go to state 32


state 23

   13 expr: SIN '(' . expr ')'

    NUMBER    shift, and go to state 5
    REGISTER  shift, and go to state 19
    PI        shift, and go to state 8
    '-'       shift, and go to state 9
    TAN       shift, and go to state 10
    COS       shift, and go to state 11
    SIN       shift, and go to state 12
    '('       shift, and go to state 13

    expr  go to state 33


state 24

    9 expr: expr . '+' expr
   10     | expr . '-' expr
   11     | expr . '/' expr
   12     | expr . '*' expr
   18     | '(' expr . ')'

    '+'  shift, and go to state 26
    '-'  shift, and go to state 27
    '*'  shift, and go to state 28
    '/'  shift, and go to state 29
    ')'  shift, and go to state 34


state 25

    1 lines: lines statement '\n' .

    $default  reduce using rule 1 (lines)


state 26

    9 expr: expr '+' . expr

    NUMBER    shift, and go to state 5
    REGISTER  shift, and go to state 19
    PI        shift, and go to state 8
    '-'       shift, and go to state 9
    TAN       shift, and go to state 10
    COS       shift, and go to state 11
    SIN       shift, and go to state 12
    '('       shift, and go to state 13

    expr  go to state 35


state 27

   10 expr: expr '-' . expr

    NUMBER    shift, and go to state 5
    REGISTER  shift, and go to state 19
    PI        shift, and go to state 8
    '-'       shift, and go to state 9
    TAN       shift, and go to state 10
    COS       shift, and go to state 11
    SIN       shift, and go to state 12
    '('       shift, and go to state 13

    expr  go to state 36


state 28

   12 expr: expr '*' . expr

    NUMBER    shift, and go to state 5
    REGISTER  shift, and go to state 19
    PI        shift, and go to state 8
    '-'       shift, and go to state 9
    TAN       shift, and go to state 10
    COS       shift, and go to state 11
    SIN       shift, and go to state 12
    '('       shift, and go to state 13

    expr  go to state 37


state 29

   11 expr: expr '/' . expr

    NUMBER    shift, and go to state 5
    REGISTER  shift, and go to state 19
    PI        shift, and go to state 8
    '-'       shift, and go to state 9
    TAN       shift, and go to state 10
    COS       shift, and go to state 11
    SIN       shift, and go to state 12
    '('       shift, and go to state 13

    expr  go to state 38


state 30

    5 statement: REGISTER '=' expr .
    9 expr: expr . '+' expr
   10     | expr . '-' expr
   11     | expr . '/' expr
   12     | expr . '*' expr

    '+'  shift, and go to state 26
    '-'  shift, and go to state 27
    '*'  shift, and go to state 28
    '/'  shift, and go to state 29

    $default  reduce using rule 5 (statement)


state 31

    9 expr: expr . '+' expr
   10     | expr . '-' expr
   11     | expr . '/' expr
   12     | expr . '*' expr
   15     | TAN '(' expr . ')'

    '+'  shift, and go to state 26
    '-'  shift, and go to state 27
    '*'  shift, and go to state 28
    '/'  shift, and go to state 29
    ')'  shift, and go to state 39


state 32

    9 expr: expr . '+' expr
   10     | expr . '-' expr
   11     | expr . '/' expr
   12     | expr . '*' expr
   14     | COS '(' expr . ')'

    '+'  shift, and go to state 26
    '-'  shift, and go to state 27
    '*'  shift, and go to state 28
    '/'  shift, and go to state 29
    ')'  shift, and go to state 40


state 33

    9 expr: expr . '+' expr
   10     | expr . '-' expr
   11     | expr . '/' expr
   12     | expr . '*' expr
   13     | SIN '(' expr . ')'

    '+'  shift, and go to state 26
    '-'  shift, and go to state 27
    '*'  shift, and go to state 28
    '/'  shift, and go to state 29
    ')'  shift, and go to state 41


state 34

   18 expr: '(' expr ')' .

    $default  reduce using rule 18 (expr)


state 35

    9 expr: expr . '+' expr
    9     | expr '+' expr .
   10     | expr . '-' expr
   11     | expr . '/' expr
   12     | expr . '*' expr

    '*'  shift, and go to state 28
    '/'  shift, and go to state 29

    $default  reduce using rule 9 (expr)


state 36

    9 expr: expr . '+' expr
   10     | expr . '-' expr
   10     | expr '-' expr .
   11     | expr . '/' expr
   12     | expr . '*' expr

    '*'  shift, and go to state 28
    '/'  shift, and go to state 29

    $default  reduce using rule 10 (expr)


state 37

    9 expr: expr . '+' expr
   10     | expr . '-' expr
   11     | expr . '/' expr
   12     | expr . '*' expr
   12     | expr '*' expr .

    $default  reduce using rule 12 (expr)


state 38

    9 expr: expr . '+' expr
   10     | expr . '-' expr
   11     | expr . '/' expr
   11     | expr '/' expr .
   12     | expr . '*' expr

    $default  reduce using rule 11 (expr)


state 39

   15 expr: TAN '(' expr ')' .

    $default  reduce using rule 15 (expr)


state 40

   14 expr: COS '(' expr ')' .

    $default  reduce using rule 14 (expr)


state 41

   13 expr: SIN '(' expr ')' .

    $default  reduce using rule 13 (expr)
